--- a/koreacovid.Rmd
+++ b/koreacovid.Rmd
@@ -21,13 +21,21 @@ mutate(across(where(is.character), as.factor))
 ### Data is from the Patient_Info dataset from South Korea 1 Jan to 1 May 2020
 ### This data was retrieved from a downloadable zip file from kaggle
 
-Some of the data was uncoded for sex - sex must be just male or female
+Some of the data was un coded for sex - sex must be just male or female
 77 of the data entries were coded sex  as blank, so we omit these.
 state of a patient must be died or alive - we adjust that as well   
   
 # Your Question - Is dying independent of sex?
 
+Question- Is dying independent of sex?
 
+$H_0$ There is no diffrence in dying depending on sex.  
+$A_0$ There is a diffrence in dying depending on sex. 
+
+
+result~sex
+categorical~categorical
+We will use the helper file CAT~CAT
 
 
 
